implement preparering icon

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -1,6 +1,8 @@
 {
   "common": {
     "loading": "Loading...",
+    "preparing": "Preparing...",
+    "loading_description": "Please wait a moment...",
     "error": "Error",
     "save": "Save",
     "cancel": "Cancel",
