feat: Enhance AI explanation features with deep translate and text selection explanation, improve paper summary localization, and optimize chat cache handling.

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -126,6 +126,7 @@
     "translate": "Translate",
     "note": "Note",
     "ask_ai": "Ask AI",
+    "explain": "Explain",
     "close": "Close"
   },
   "search": {
