--- a/frontend/src/locales/ja.json
+++ b/frontend/src/locales/ja.json
@@ -126,6 +126,7 @@
     "translate": "翻訳",
     "note": "ノート",
     "ask_ai": "AIに聞く",
+    "explain": "解説",
     "close": "閉じる"
   },
   "search": {
