--- a/frontend/src/locales/ja.json
+++ b/frontend/src/locales/ja.json
@@ -35,7 +35,8 @@
 		"github": "GitHubでログイン",
 		"guest": "ゲストとして利用する",
 		"redirect_hint": "ポップアップが動かない場合はこちら:",
-		"terms_hint": "ログインすることで、利用規約およびプライバシーポリシーに同意したものとみなされます。"
+		"terms_hint": "ログインすることで、利用規約およびプライバシーポリシーに同意したものとみなされます。",
+		"signing_in": "サインイン中..."
 	},
 	"sidebar": {
 		"tabs": {
