feat: Allow configuring the AI model for figure and table analysis via environment variable and update frontend application logic.

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -22,6 +22,7 @@
 		"limited_access": "Limited Access",
 		"no_papers": "No papers uploaded yet",
 		"uploaded_on": "Uploaded on: ",
+		"status_logged_in": "Logged In",
 		"close_menu": "Close menu",
 		"open_menu": "Open menu",
 		"paper_library": "Paper Library",
