--- a/frontend/src/locales/ja.json
+++ b/frontend/src/locales/ja.json
@@ -22,6 +22,7 @@
 		"limited_access": "制限付きアクセス",
 		"no_papers": "まだ論文がアップロードされていません",
 		"uploaded_on": "アップロード日: ",
+		"status_logged_in": "ログイン中",
 		"close_menu": "メニューを閉じる",
 		"open_menu": "メニューを開く",
 		"paper_library": "論文ライブラリ",
