--- a/frontend/src/locales/ja.json
+++ b/frontend/src/locales/ja.json
@@ -139,5 +139,22 @@
 		"close": "閉じる (Esc)",
 		"hint_next": "次へ",
 		"hint_prev": "前へ"
+	},
+	"recommendation": {
+		"explore_title": "次の論文を探す",
+		"explore_description": "あなたの読書履歴と読書行動に基づいて、深く掘り下げるためのパーソナライズされた推薦論文を生成します。",
+		"analyzing": "ユーザープロファイルを分析し、インサイトを生成中...",
+		"reasoning_title": "推薦の根拠",
+		"top_recommendations": "おすすめの論文",
+		"status_clicked": "チェック済み",
+		"action_explore": "内容を見る",
+		"feedback": {
+			"title": "改善にご協力ください",
+			"description": "これらの推薦を評価して、今後の提案の質を向上させましょう。",
+			"poor": "期待外れ",
+			"excellent": "素晴らしい",
+			"submit": "フィードバックを送信",
+			"thank_you": "フィードバックありがとうございます！"
+		}
 	}
 }
