feat: Implement confidence-based advanced word explanation using Qwen3 for low OCR confidence words.

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -68,7 +68,7 @@
 			"click_hint": "Click any word in the PDF to see its definition here.",
 			"external_link": "External Link",
 			"open_link": "Open Link",
-			"ask_ai": "Ask AI",
+			"ask_ai": "Advanced Translation",
 			"save_note": "Save Note",
 			"saved": "Saved",
 			"jump": "Jump to Location"
