--- a/frontend/src/locales/ja.json
+++ b/frontend/src/locales/ja.json
@@ -74,7 +74,7 @@
 			"click_hint": "単語をクリックして意味を調べられます。",
 			"external_link": "外部リンク",
 			"open_link": "リンクを開く",
-			"ask_ai": "AIで翻訳",
+			"ask_ai": "Advanced Translation",
 			"save_note": "ノートに保存",
 			"saved": "保存済み",
 			"jump": "場所へ移動"
