--- a/frontend/src/locales/ja.json
+++ b/frontend/src/locales/ja.json
@@ -13,7 +13,9 @@
 			"title": "この結果はいかがでしたか？",
 			"good": "役立った",
 			"bad": "期待外れ",
-			"submitted": "評価ありがとうございます！"
+			"submitted": "評価ありがとうございます！",
+			"placeholder": "詳細を教えてください（任意）",
+			"send": "送信する"
 		}
 	},
 	"nav": {
