feat: Refactor backend AI features to use DSPy modules, remove unused paper stacking and agent features, and enhance API URL resolution.

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -52,8 +52,7 @@
 			"dict": "Dict",
 			"summary": "Summary",
 			"chat": "Chat",
-			"notes": "Notes",
-			"stack": "Stack"
+			"notes": "Notes"
 		}
 	},
 	"viewer": {
