--- a/frontend/src/locales/ja.json
+++ b/frontend/src/locales/ja.json
@@ -52,8 +52,7 @@
 			"dict": "辞書",
 			"summary": "要約",
 			"chat": "チャット",
-			"notes": "ノート",
-			"stack": "スタック"
+			"notes": "ノート"
 		}
 	},
 	"viewer": {
