feat: Introduce recommendation and chat feedback features, enhance PDF viewer performance and stamp management, and update AI translation services.

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -19,6 +19,7 @@
 		}
 	},
 	"nav": {
+		"explore": "Explore",
 		"library": "Library",
 		"settings": "Settings",
 		"login": "Login",
@@ -75,6 +76,7 @@
 			"external_link": "External Link",
 			"open_link": "Open Link",
 			"ask_ai": "Advanced Translation",
+			"ask_in_chat": "Ask in Chat",
 			"save_note": "Save Note",
 			"saved": "Saved",
 			"jump": "Jump to Location"
